.happypack/s-965590134
SyntaxError: Unexpected token, expected , (48:7)

[0m [90m 46 | [39m          caption[33m:[39m [32m'Photo by Robert M.'[39m
 [90m 47 | [39m        }
[31m[1m>[22m[39m[90m 48 | [39m      ][33m;[39m
 [90m    | [39m       [31m[1m^[22m[39m
 [90m 49 | [39m    })
 [90m 50 | [39m
 [90m 51 | [39m    [36mvar[39m options [33m=[39m {[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (48:7)

[0m [90m 46 | [39m          caption[33m:[39m [32m'Photo by Robert M.'[39m
 [90m 47 | [39m        }
[31m[1m>[22m[39m[90m 48 | [39m      ][33m;[39m
 [90m    | [39m       [31m[1m^[22m[39m
 [90m 49 | [39m    })
 [90m 50 | [39m
 [90m 51 | [39m    [36mvar[39m options [33m=[39m {[0m

    at transpile (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyWorker.js:32:3)